# Musixtral

./: .gitignore  README.md
MusicToolkit/: .vercelignore  README.md  example_usage.py  mcp_config.json  music_toolkit_server.py  pyproject.toml  requirements.txt  test_server.py  vercel.json
MusicToolkit/api/: index.py  mcp.py
MusicToolkit/public/: index.html
